// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`profile round-trips > CineStill 50D — processImageData with default settings produces stable output 1`] = `
[
  42,
  78,
  92,
  255,
  147,
  143,
  143,
  255,
  222,
  212,
  210,
  255,
  59,
  66,
  69,
  255,
]
`;

exports[`profile round-trips > CineStill 400D — processImageData with default settings produces stable output 1`] = `
[
  39,
  80,
  95,
  255,
  154,
  147,
  147,
  255,
  226,
  217,
  214,
  255,
  60,
  67,
  70,
  255,
]
`;

exports[`profile round-trips > CineStill 800T — processImageData with default settings produces stable output 1`] = `
[
  47,
  90,
  128,
  255,
  167,
  163,
  198,
  255,
  230,
  227,
  230,
  255,
  66,
  76,
  97,
  255,
]
`;

exports[`profile round-trips > CineStill BwXX — processImageData with default settings produces stable output 1`] = `
[
  47,
  47,
  47,
  255,
  134,
  134,
  134,
  255,
  217,
  217,
  217,
  255,
  40,
  40,
  40,
  255,
]
`;

exports[`profile round-trips > Fomapan 100 — processImageData with default settings produces stable output 1`] = `
[
  54,
  54,
  54,
  255,
  136,
  136,
  136,
  255,
  214,
  214,
  214,
  255,
  47,
  47,
  47,
  255,
]
`;

exports[`profile round-trips > Fomapan 200 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  49,
  49,
  49,
  255,
]
`;

exports[`profile round-trips > Fomapan 400 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  137,
  137,
  137,
  255,
  216,
  216,
  216,
  255,
  49,
  49,
  49,
  255,
]
`;

exports[`profile round-trips > Fuji Astia 100F — processImageData with default settings produces stable output 1`] = `
[
  31,
  71,
  91,
  255,
  128,
  138,
  146,
  255,
  203,
  208,
  216,
  255,
  45,
  59,
  66,
  255,
]
`;

exports[`profile round-trips > Fuji Pro 160NS — processImageData with default settings produces stable output 1`] = `
[
  36,
  81,
  101,
  255,
  128,
  152,
  161,
  255,
  201,
  221,
  228,
  255,
  50,
  69,
  77,
  255,
]
`;

exports[`profile round-trips > Fuji Provia 100F — processImageData with default settings produces stable output 1`] = `
[
  26,
  70,
  92,
  255,
  127,
  138,
  147,
  255,
  203,
  209,
  217,
  255,
  43,
  58,
  65,
  255,
]
`;

exports[`profile round-trips > Fuji Superia X-TRA 400 — processImageData with default settings produces stable output 1`] = `
[
  17,
  86,
  104,
  255,
  125,
  166,
  161,
  255,
  205,
  241,
  233,
  255,
  38,
  70,
  72,
  255,
]
`;

exports[`profile round-trips > Fuji Velvia 50 — processImageData with default settings produces stable output 1`] = `
[
  1,
  74,
  114,
  255,
  119,
  146,
  171,
  255,
  201,
  222,
  250,
  255,
  30,
  57,
  75,
  255,
]
`;

exports[`profile round-trips > Fujifilm 200 — processImageData with default settings produces stable output 1`] = `
[
  24,
  77,
  98,
  255,
  126,
  151,
  156,
  255,
  204,
  225,
  228,
  255,
  42,
  63,
  70,
  255,
]
`;

exports[`profile round-trips > Fujifilm 400 — processImageData with default settings produces stable output 1`] = `
[
  29,
  79,
  96,
  255,
  144,
  152,
  150,
  255,
  227,
  226,
  220,
  255,
  50,
  65,
  67,
  255,
]
`;

exports[`profile round-trips > Fujifilm C200 — processImageData with default settings produces stable output 1`] = `
[
  24,
  79,
  99,
  255,
  128,
  153,
  157,
  255,
  207,
  228,
  229,
  255,
  42,
  65,
  70,
  255,
]
`;

exports[`profile round-trips > Fujifilm Neopan Acros 100 II — processImageData with default settings produces stable output 1`] = `
[
  57,
  57,
  57,
  255,
  136,
  136,
  136,
  255,
  211,
  211,
  211,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Fujifilm Pro 400H — processImageData with default settings produces stable output 1`] = `
[
  37,
  89,
  116,
  255,
  133,
  167,
  186,
  255,
  208,
  236,
  238,
  255,
  51,
  76,
  89,
  255,
]
`;

exports[`profile round-trips > Fujifilm Superia 400 — processImageData with default settings produces stable output 1`] = `
[
  23,
  83,
  95,
  255,
  137,
  161,
  148,
  255,
  219,
  236,
  219,
  255,
  44,
  68,
  66,
  255,
]
`;

exports[`profile round-trips > Generic B&W — processImageData with default settings produces stable output 1`] = `
[
  60,
  60,
  60,
  255,
  136,
  136,
  136,
  255,
  210,
  210,
  210,
  255,
  54,
  54,
  54,
  255,
]
`;

exports[`profile round-trips > Generic Color — processImageData with default settings produces stable output 1`] = `
[
  38,
  68,
  75,
  255,
  148,
  139,
  128,
  255,
  228,
  211,
  194,
  255,
  52,
  56,
  54,
  255,
]
`;

exports[`profile round-trips > Harman Phoenix 200 — processImageData with default settings produces stable output 1`] = `
[
  0,
  74,
  90,
  255,
  152,
  149,
  139,
  255,
  245,
  228,
  212,
  255,
  38,
  55,
  54,
  255,
]
`;

exports[`profile round-trips > Harman Phoenix II 200 — processImageData with default settings produces stable output 1`] = `
[
  13,
  74,
  93,
  255,
  147,
  148,
  144,
  255,
  233,
  222,
  215,
  255,
  43,
  58,
  60,
  255,
]
`;

exports[`profile round-trips > Harman Red 125 — processImageData with default settings produces stable output 1`] = `
[
  18,
  60,
  26,
  255,
  221,
  126,
  47,
  255,
  253,
  204,
  89,
  255,
  69,
  44,
  6,
  255,
]
`;

exports[`profile round-trips > Harman Switch Azure — processImageData with default settings produces stable output 1`] = `
[
  18,
  77,
  128,
  255,
  116,
  155,
  196,
  255,
  195,
  231,
  244,
  255,
  32,
  61,
  87,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 100 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  48,
  48,
  48,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 400 — processImageData with default settings produces stable output 1`] = `
[
  46,
  46,
  46,
  255,
  132,
  132,
  132,
  255,
  214,
  214,
  214,
  255,
  40,
  40,
  40,
  255,
]
`;

exports[`profile round-trips > Ilford Delta 3200 — processImageData with default settings produces stable output 1`] = `
[
  29,
  29,
  29,
  255,
  130,
  130,
  130,
  255,
  224,
  224,
  224,
  255,
  21,
  21,
  21,
  255,
]
`;

exports[`profile round-trips > Ilford FP4 Plus — processImageData with default settings produces stable output 1`] = `
[
  57,
  57,
  57,
  255,
  136,
  136,
  136,
  255,
  212,
  212,
  212,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Ilford HP5 Plus — processImageData with default settings produces stable output 1`] = `
[
  51,
  51,
  51,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  45,
  45,
  45,
  255,
]
`;

exports[`profile round-trips > Ilford Ortho Plus — processImageData with default settings produces stable output 1`] = `
[
  45,
  45,
  45,
  255,
  132,
  132,
  132,
  255,
  214,
  214,
  214,
  255,
  38,
  38,
  38,
  255,
]
`;

exports[`profile round-trips > Ilford Pan F Plus 50 — processImageData with default settings produces stable output 1`] = `
[
  49,
  49,
  49,
  255,
  135,
  135,
  135,
  255,
  216,
  216,
  216,
  255,
  42,
  42,
  42,
  255,
]
`;

exports[`profile round-trips > Ilford SFX 200 — processImageData with default settings produces stable output 1`] = `
[
  43,
  43,
  43,
  255,
  131,
  131,
  131,
  255,
  215,
  215,
  215,
  255,
  36,
  36,
  36,
  255,
]
`;

exports[`profile round-trips > Ilford XP2 Super — processImageData with default settings produces stable output 1`] = `
[
  60,
  60,
  60,
  255,
  137,
  137,
  137,
  255,
  211,
  211,
  211,
  255,
  54,
  54,
  54,
  255,
]
`;

exports[`profile round-trips > Kentmere Pan 100 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  48,
  48,
  48,
  255,
]
`;

exports[`profile round-trips > Kentmere Pan 200 — processImageData with default settings produces stable output 1`] = `
[
  52,
  52,
  52,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  46,
  46,
  46,
  255,
]
`;

exports[`profile round-trips > Kentmere Pan 400 — processImageData with default settings produces stable output 1`] = `
[
  56,
  56,
  56,
  255,
  138,
  138,
  138,
  255,
  216,
  216,
  216,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Kodak ColorPlus 200 — processImageData with default settings produces stable output 1`] = `
[
  38,
  79,
  83,
  255,
  173,
  150,
  127,
  255,
  246,
  223,
  194,
  255,
  63,
  64,
  56,
  255,
]
`;

exports[`profile round-trips > Kodak Double-X 5222 — processImageData with default settings produces stable output 1`] = `
[
  45,
  45,
  45,
  255,
  134,
  134,
  134,
  255,
  218,
  218,
  218,
  255,
  38,
  38,
  38,
  255,
]
`;

exports[`profile round-trips > Kodak Ektachrome E100 — processImageData with default settings produces stable output 1`] = `
[
  22,
  70,
  96,
  255,
  126,
  138,
  151,
  255,
  204,
  211,
  224,
  255,
  40,
  56,
  67,
  255,
]
`;

exports[`profile round-trips > Kodak Ektacolor Pro 160 — processImageData with default settings produces stable output 1`] = `
[
  45,
  79,
  89,
  255,
  150,
  143,
  137,
  255,
  224,
  212,
  201,
  255,
  62,
  68,
  67,
  255,
]
`;

exports[`profile round-trips > Kodak Ektacolor Pro 400 — processImageData with default settings produces stable output 1`] = `
[
  48,
  84,
  90,
  255,
  163,
  150,
  136,
  255,
  230,
  217,
  200,
  255,
  67,
  71,
  68,
  255,
]
`;

exports[`profile round-trips > Kodak Ektacolor Pro 800 — processImageData with default settings produces stable output 1`] = `
[
  55,
  91,
  97,
  255,
  173,
  158,
  144,
  255,
  229,
  223,
  209,
  255,
  75,
  78,
  75,
  255,
]
`;

exports[`profile round-trips > Kodak Ektapan 100 — processImageData with default settings produces stable output 1`] = `
[
  56,
  56,
  56,
  255,
  136,
  136,
  136,
  255,
  212,
  212,
  212,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Kodak Ektapan 400 — processImageData with default settings produces stable output 1`] = `
[
  51,
  51,
  51,
  255,
  135,
  135,
  135,
  255,
  214,
  214,
  214,
  255,
  44,
  44,
  44,
  255,
]
`;

exports[`profile round-trips > Kodak Ektapan P3200 — processImageData with default settings produces stable output 1`] = `
[
  31,
  31,
  31,
  255,
  131,
  131,
  131,
  255,
  223,
  223,
  223,
  255,
  23,
  23,
  23,
  255,
]
`;

exports[`profile round-trips > Kodak Ektar 100 — processImageData with default settings produces stable output 1`] = `
[
  12,
  70,
  85,
  255,
  140,
  140,
  130,
  255,
  227,
  214,
  198,
  255,
  40,
  54,
  54,
  255,
]
`;

exports[`profile round-trips > Kodak Gold 100 — processImageData with default settings produces stable output 1`] = `
[
  39,
  80,
  83,
  255,
  174,
  148,
  124,
  255,
  245,
  220,
  187,
  255,
  65,
  65,
  57,
  255,
]
`;

exports[`profile round-trips > Kodak Gold 200 — processImageData with default settings produces stable output 1`] = `
[
  37,
  81,
  80,
  255,
  190,
  152,
  119,
  255,
  248,
  229,
  185,
  255,
  68,
  65,
  52,
  255,
]
`;

exports[`profile round-trips > Kodak Kodacolor 100 — processImageData with default settings produces stable output 1`] = `
[
  35,
  77,
  86,
  255,
  159,
  144,
  131,
  255,
  239,
  215,
  197,
  255,
  58,
  63,
  60,
  255,
]
`;

exports[`profile round-trips > Kodak Kodacolor 200 — processImageData with default settings produces stable output 1`] = `
[
  37,
  78,
  84,
  255,
  170,
  148,
  129,
  255,
  245,
  220,
  195,
  255,
  62,
  64,
  58,
  255,
]
`;

exports[`profile round-trips > Kodak Plus-X 125 — processImageData with default settings produces stable output 1`] = `
[
  55,
  55,
  55,
  255,
  136,
  136,
  136,
  255,
  213,
  213,
  213,
  255,
  49,
  49,
  49,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 160 — processImageData with default settings produces stable output 1`] = `
[
  44,
  78,
  88,
  255,
  151,
  143,
  134,
  255,
  226,
  212,
  198,
  255,
  61,
  67,
  65,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 400 — processImageData with default settings produces stable output 1`] = `
[
  47,
  82,
  87,
  255,
  169,
  148,
  131,
  255,
  233,
  217,
  194,
  255,
  68,
  69,
  64,
  255,
]
`;

exports[`profile round-trips > Kodak Portra 800 — processImageData with default settings produces stable output 1`] = `
[
  54,
  91,
  98,
  255,
  173,
  158,
  144,
  255,
  231,
  223,
  209,
  255,
  75,
  78,
  75,
  255,
]
`;

exports[`profile round-trips > Kodak Pro Image 100 — processImageData with default settings produces stable output 1`] = `
[
  42,
  77,
  86,
  255,
  154,
  144,
  134,
  255,
  232,
  215,
  200,
  255,
  60,
  65,
  63,
  255,
]
`;

exports[`profile round-trips > Kodak T-Max 100 — processImageData with default settings produces stable output 1`] = `
[
  56,
  56,
  56,
  255,
  136,
  136,
  136,
  255,
  212,
  212,
  212,
  255,
  50,
  50,
  50,
  255,
]
`;

exports[`profile round-trips > Kodak T-Max 400 — processImageData with default settings produces stable output 1`] = `
[
  51,
  51,
  51,
  255,
  135,
  135,
  135,
  255,
  215,
  215,
  215,
  255,
  44,
  44,
  44,
  255,
]
`;

exports[`profile round-trips > Kodak Tri-X 400 — processImageData with default settings produces stable output 1`] = `
[
  42,
  42,
  42,
  255,
  134,
  134,
  134,
  255,
  220,
  220,
  220,
  255,
  34,
  34,
  34,
  255,
]
`;

exports[`profile round-trips > Kodak UltraMax 400 — processImageData with default settings produces stable output 1`] = `
[
  34,
  83,
  85,
  255,
  178,
  153,
  126,
  255,
  247,
  226,
  191,
  255,
  64,
  66,
  57,
  255,
]
`;

exports[`profile round-trips > Kodak Verita 200D — processImageData with default settings produces stable output 1`] = `
[
  34,
  79,
  86,
  255,
  166,
  148,
  131,
  255,
  238,
  220,
  198,
  255,
  60,
  64,
  59,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 50D — processImageData with default settings produces stable output 1`] = `
[
  46,
  79,
  92,
  255,
  146,
  144,
  143,
  255,
  219,
  211,
  209,
  255,
  61,
  68,
  70,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 200T — processImageData with default settings produces stable output 1`] = `
[
  48,
  83,
  105,
  255,
  152,
  151,
  165,
  255,
  222,
  218,
  224,
  255,
  63,
  72,
  81,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 250D — processImageData with default settings produces stable output 1`] = `
[
  48,
  82,
  94,
  255,
  155,
  150,
  146,
  255,
  225,
  217,
  212,
  255,
  64,
  71,
  72,
  255,
]
`;

exports[`profile round-trips > Kodak Vision3 500T — processImageData with default settings produces stable output 1`] = `
[
  50,
  86,
  111,
  255,
  158,
  156,
  173,
  255,
  224,
  221,
  225,
  255,
  66,
  75,
  86,
  255,
]
`;

exports[`profile round-trips > LomoChrome Classicolor 200 — processImageData with default settings produces stable output 1`] = `
[
  36,
  77,
  87,
  255,
  158,
  147,
  135,
  255,
  239,
  218,
  202,
  255,
  57,
  63,
  61,
  255,
]
`;

exports[`profile round-trips > LomoChrome Color '92 Sun-kissed — processImageData with default settings produces stable output 1`] = `
[
  30,
  79,
  78,
  255,
  175,
  150,
  118,
  255,
  248,
  226,
  182,
  255,
  60,
  62,
  50,
  255,
]
`;

exports[`profile round-trips > LomoChrome Color '92 — processImageData with default settings produces stable output 1`] = `
[
  21,
  77,
  97,
  255,
  144,
  149,
  151,
  255,
  228,
  223,
  222,
  255,
  46,
  61,
  66,
  255,
]
`;

exports[`profile round-trips > LomoChrome Metropolis — processImageData with default settings produces stable output 1`] = `
[
  19,
  63,
  80,
  255,
  133,
  143,
  147,
  255,
  220,
  222,
  225,
  255,
  35,
  49,
  55,
  255,
]
`;

exports[`profile round-trips > LomoChrome Purple — processImageData with default settings produces stable output 1`] = `
[
  34,
  75,
  92,
  255,
  143,
  144,
  153,
  255,
  224,
  217,
  225,
  255,
  49,
  59,
  66,
  255,
]
`;

exports[`profile round-trips > LomoChrome Turquoise — processImageData with default settings produces stable output 1`] = `
[
  29,
  78,
  128,
  255,
  123,
  154,
  191,
  255,
  200,
  229,
  246,
  255,
  40,
  64,
  88,
  255,
]
`;

exports[`profile round-trips > Lomography Berlin Kino 400 — processImageData with default settings produces stable output 1`] = `
[
  50,
  50,
  50,
  255,
  137,
  137,
  137,
  255,
  219,
  219,
  219,
  255,
  43,
  43,
  43,
  255,
]
`;

exports[`profile round-trips > Lomography CN 400 — processImageData with default settings produces stable output 1`] = `
[
  19,
  77,
  87,
  255,
  163,
  149,
  130,
  255,
  250,
  225,
  199,
  255,
  51,
  59,
  54,
  255,
]
`;

exports[`profile round-trips > Lomography CN 800 — processImageData with default settings produces stable output 1`] = `
[
  24,
  80,
  92,
  255,
  168,
  153,
  139,
  255,
  245,
  228,
  209,
  255,
  55,
  63,
  60,
  255,
]
`;

exports[`profile round-trips > Lomography Potsdam Kino 100 — processImageData with default settings produces stable output 1`] = `
[
  50,
  50,
  50,
  255,
  135,
  135,
  135,
  255,
  215,
  215,
  215,
  255,
  43,
  43,
  43,
  255,
]
`;

exports[`profile round-trips > Lomography Redscale XR — processImageData with default settings produces stable output 1`] = `
[
  24,
  61,
  25,
  255,
  232,
  125,
  44,
  255,
  255,
  203,
  85,
  255,
  75,
  44,
  5,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 25 — processImageData with default settings produces stable output 1`] = `
[
  52,
  52,
  52,
  255,
  136,
  136,
  136,
  255,
  215,
  215,
  215,
  255,
  46,
  46,
  46,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 100 — processImageData with default settings produces stable output 1`] = `
[
  54,
  54,
  54,
  255,
  136,
  136,
  136,
  255,
  214,
  214,
  214,
  255,
  47,
  47,
  47,
  255,
]
`;

exports[`profile round-trips > Rollei RPX 400 — processImageData with default settings produces stable output 1`] = `
[
  54,
  54,
  54,
  255,
  137,
  137,
  137,
  255,
  217,
  217,
  217,
  255,
  47,
  47,
  47,
  255,
]
`;
